<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ProductionStyle"
                android:text="@string/machine"/>

            <TextView
                style="@style/ProductionStyle"
                android:text="@string/main_production"/>

            <TextView
                style="@style/ProductionStyle"
                android:text="@string/operator"/>

            <TextView
                style="@style/ProductionStyle"
                android:text="@string/start_time"/>

            <TextView
                style="@style/ProductionStyle"
                android:text="@string/end_time"/>

            <TextView
                style="@style/ProductionStyle"

                android:text="@string/planned_date"/>
        </LinearLayout>

        <ListView
            android:id="@+id/lvProduction"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>


</LinearLayout>