<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tvArea"
                android:background="@drawable/spinner_drawable"
                style="@style/HomeFragment"
                android:text="@string/tv_area"
                android:drawableRight="@drawable/arrow"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />


            <TextView
                android:background="@drawable/spinner_drawable"
                android:id="@+id/tvFactory"
                android:text="@string/tv_factory"
                style="@style/HomeFragment"
                android:drawableRight="@drawable/arrow"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/btnSearch"
                style="@style/HomeFragment"
                android:onClick="btnSearch"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_seclect"
                android:text="@string/btn_search" />
        </LinearLayout>
        <include layout="@layout/underline_black"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

            </com.github.mikephil.charting.charts.BarChart>
        </LinearLayout>
        <include layout="@layout/underline_black"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                style="@style/HomeFragment"
                android:text="@string/tv_device" />

            <TextView
                style="@style/HomeFragment"
                android:text="@string/acquisition_total_points" />

            <TextView
                style="@style/HomeFragment"
                android:text="@string/unusual_points" />

            <TextView
                style="@style/HomeFragment"
                android:text="@string/real_status" />
        </LinearLayout>
        <include layout="@layout/underline_black"></include>
        <in.srain.cube.views.ptr.PtrFrameLayout
            android:id="@+id/prtReal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <ListView
            android:id="@+id/realListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        </ListView>
        </in.srain.cube.views.ptr.PtrFrameLayout>
    </LinearLayout>
</layout>

