<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
　　

        <RelativeLayout
            android:id="@+id/rl_map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
          >
            <ImageView
                android:id="@+id/iv_ar"
                android:src="@drawable/zongtu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


            <TextView
                android:gravity="center"
                android:id="@+id/cn"
                android:textColor="#0f00"
                android:layout_width="240pt"
                android:layout_height="90pt"
                android:layout_marginTop="5pt"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="120pt"
                android:layout_marginStart="120pt"
                android:text="@string/china"/>

            <TextView
                android:id="@+id/tg"
                android:gravity="center"
                android:textColor="#0f0f"
                android:layout_width="60pt"
                android:layout_height="60pt"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:layout_marginLeft="120pt"
                android:layout_marginStart="120pt"
                android:layout_marginTop="170pt"
                android:text="@string/thailand"/>

            <TextView
                android:id="@+id/yn"
                android:gravity="center"
                android:textColor="#0f0f"
                android:layout_width="40pt"
                android:layout_height="60pt"
                android:layout_marginLeft="50pt"
                android:layout_marginStart="50pt"
                android:layout_marginTop="40pt"
                android:text="@string/vietnam"
                android:layout_alignTop="@+id/tg"
                android:layout_toRightOf="@+id/tg"
                android:layout_toEndOf="@+id/tg"/>

            <TextView
                android:id="@+id/ml1"
                android:gravity="center"
                android:textColor="#0f0f"
                android:layout_width="60pt"
                android:layout_height="70pt"
                android:layout_marginTop="340pt"
                android:layout_marginLeft="120pt"
                android:text="@string/malaysia"/>
            <TextView
                android:id="@+id/ml2"
                android:gravity="center"
                android:textColor="#0f0f"
                android:layout_width="80pt"
                android:layout_height="50pt"
                android:text="@string/malaysia"
                android:layout_alignBaseline="@+id/ml1"
                android:layout_alignBottom="@+id/ml1"
                android:layout_alignRight="@+id/cn"
                android:layout_alignEnd="@+id/cn"/>

            <TextView
                android:id="@+id/tw"
                android:textColor="#0f0f"
                android:gravity="center"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_marginLeft="400pt"
                android:layout_marginStart="400pt"
                android:layout_marginTop="60pt"
                android:text="@string/taiwan"/>


        </RelativeLayout>

        <include layout="@layout/underline_black"></include>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
           <TextView
               android:text="@string/factory"
               style="@style/HomeFragment"/>
            <TextView
                android:text="@string/area"
                style="@style/HomeFragment"/>
            <TextView
                android:text="@string/device"
                style="@style/HomeFragment"/>
            <TextView
                android:text="@string/unusual"
                style="@style/HomeFragment" />
        </LinearLayout>
        <include layout="@layout/underline_black"></include>
        <in.srain.cube.views.ptr.PtrFrameLayout
            android:id="@+id/prtHome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <ListView
            android:id="@+id/homeListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

        </ListView>
        </in.srain.cube.views.ptr.PtrFrameLayout>
    </LinearLayout>
</layout>

