<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tvArea"
                style="@style/HomeFragment"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/spinner_drawable"
                android:drawableRight="@drawable/arrow"
                android:text="@string/tv_area"/>


            <TextView
                android:id="@+id/tvFactory"
                style="@style/HomeFragment"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/spinner_drawable"
                android:drawableRight="@drawable/arrow"
                android:text="@string/tv_factory"/>

            <TextView
                android:id="@+id/tvEquipment"
                style="@style/HomeFragment"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/spinner_drawable"
                android:drawableRight="@drawable/arrow"
                android:text="@string/history_device"
                />

            <Button
                android:id="@+id/btnSearch"
                style="@style/HomeFragment"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_seclect"
                android:text="@string/btn_search"/>
        </LinearLayout>

        <include layout="@layout/underline_black"></include>

        <TextView
            android:id="@+id/tvModule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/history_module"
            android:textColor="@color/colorTitle"
            android:textSize="18sp"/>

        <include layout="@layout/underline_black"></include>

        <in.srain.cube.views.ptr.PtrClassicFrameLayout
            android:id="@+id/prtHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <GridView
                android:id="@+id/gvChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:numColumns="2">
            </GridView>
        </in.srain.cube.views.ptr.PtrClassicFrameLayout>
    </LinearLayout>
</layout>

