<?xml version="1.0" encoding="utf-8"?>
<layout   xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="56dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <ImageView android:src="@drawable/changsheng"
                           android:layout_width="wrap_content"
                           android:layout_height="72dp"
                           android:layout_marginBottom="24dp"
                           android:layout_gravity="center_horizontal" />

                <!-- Email Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText android:id="@+id/etPhoneNum"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="textEmailAddress"
                              android:hint="@string/login_number" />
                </android.support.design.widget.TextInputLayout>

                <!-- Password Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText android:id="@+id/etPassword"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="textPassword"
                              android:hint="@string/login_psw"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:background="@color/colorLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/white"
                    android:onClick="login"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:text="@string/login_btn"/>

                <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorLogin"
                android:layout_height="wrap_content"
                android:text="@string/register_number"
                />
                <TextView
                android:id="@+id/tvFindPSW"
                android:visibility="visible"
                android:layout_gravity="right"
                android:textSize="14sp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_marginRight="15dp"
                android:textColor="@color/colorLogin"
                android:layout_height="wrap_content"
                android:text="@string/find_psw"
                />
                </RelativeLayout>

            </LinearLayout>
    </LinearLayout>
</layout>
